src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Decision</fullName>
        </values>
        <values>
            <fullName>Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Internal Request</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Brief_Description_Label__c</fullName>
        <defaultValue>&quot;Give a brief, one-description of your problem/request.&quot;</defaultValue>
        <label>Brief Description Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Code__c</fullName>
        <inlineHelpText>Enter a Budget Code must be entered for a new Salesforce login to be created</inlineHelpText>
        <label>Budget Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseContactCreator__c</fullName>
        <formula>Contact.User__c =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseContactCreator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_Comments__c</fullName>
        <description>Closing Comments on Salesforce tickets</description>
        <label>Closing Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <formula>IF(INCLUDES( CreatedBy.Department__c, &quot;BJC&quot;), &quot;BJC&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;CCM&quot;), &quot;CCM&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;CEP&quot;), &quot;CEP&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;Choices&quot;), &quot;Choices&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;CIRT&quot;), &quot;CIRT&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;Civic Justice Corps&quot;), &quot;CJC&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;DTC&quot;), &quot;DTC&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;Justice Scholars&quot;), &quot;Justice Scholars&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;PRP&quot;), &quot;PRP&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;Queens Justice Corps&quot;), &quot;QJC&quot; + &quot;;&quot; , NULL) +
IF(INCLUDES( CreatedBy.Department__c, &quot;TRP&quot;), &quot;TRP&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>For Salesforce Tickets</description>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsCreator__c</fullName>
        <description>Current user is the person who created ticket</description>
        <formula>$User.Id =  CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCreator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modification_Type__c</fullName>
        <description>Multi-picklist to categorize what types of modifications to the system are being done</description>
        <inlineHelpText>Please select the appropriate types of changes needed. Put details in Description. Be sure to email both the Npower and the CASES Database team when implementation date is known and again when implementation is in production.</inlineHelpText>
        <label>Modification Type</label>
        <picklist>
            <picklistValues>
                <fullName>APEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VisualForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Module_Affected__c</fullName>
        <description>Program module affected by problem</description>
        <label>Module Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Account Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Date Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events\Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Do Portal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_User_Department__c</fullName>
        <label>New User Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Name__c</fullName>
        <label>New User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Start_Date__c</fullName>
        <label>New User Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_User_title__c</fullName>
        <label>New User title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Case_Descirption__c</fullName>
        <formula>Parent.Subject</formula>
        <label>Parent Case Descirption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Type__c</fullName>
        <label>Problem Type</label>
        <picklist>
            <picklistValues>
                <fullName>Blockage - It doesn&apos;t work and I don&apos;t have a workaround</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bottleneck - It doesn&apos;t work but have workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annoyance - it works, but could be easier and quicker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>If Multiple Programs selected, please define scope (which programs) in description.</inlineHelpText>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All START Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Youth Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI START</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choices - All boroughs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choices - Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choices - Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT - All Boroughs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT - Brooklyn (CCI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT - Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CJC/JS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Programs</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PEAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>START</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervised Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllAwaitingResponse</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Awaiting Response</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>(PARENT)</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Robinson,Millan</value>
        </filters>
        <label>All Awaiting Response</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>PARENT</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected,Internal Request</value>
        </filters>
        <label>All Open Tickets</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Unassigned_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>PARENT</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected,Internal Request</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Database Team</value>
        </filters>
        <label>All Open, Unassigned Tickets</label>
    </listViews>
    <listViews>
        <fullName>Database_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Database Team</label>
        <queue>Database_Team</queue>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HighPriorityEscalated</fullName>
        <booleanFilter>1 AND 2 AND 3 AND  5 and (4 or 6)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.Project_Feature_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>CASES.PRIORITY</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>CASES.ESCALATION_STATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>lessThan</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>High Priority Escalated</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LZ_Open_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Lyudmila</value>
        </filters>
        <label>LZ Open cases</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_7_days_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <label>Last 7 days Tickets</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Program__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Projects</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Program__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Project_Feature_Request</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>PARENT</value>
        </filters>
        <label>My Open Projects</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewUserTickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.User_Admin_Ticket,Case.User_Creation_Ticket</value>
        </filters>
        <label>New User Tickets</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Our_Open_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Michael,Lyudmila,Suleman</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected,Internal Request</value>
        </filters>
        <label>My Open Tickets</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Project_Feature_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Project_Feature_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected</value>
        </filters>
        <label>Project Feature Requests</label>
    </listViews>
    <listViews>
        <fullName>Tickets_I_Submitted</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsCreator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tickets I Submitted</label>
    </listViews>
    <recordTypes>
        <fullName>Data_Integrity</fullName>
        <active>true</active>
        <businessProcess>Standard Process</businessProcess>
        <description>Duplicate records / incorrect data / missing data</description>
        <label>Data Integrity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Feature_Request</fullName>
        <active>true</active>
        <businessProcess>Standard Process</businessProcess>
        <description>new functionality</description>
        <label>Project / Feature Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Ticket</fullName>
        <active>true</active>
        <businessProcess>Standard Process</businessProcess>
        <description>Ticket for Salesforce help</description>
        <label>Salesforce Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Admin_Ticket</fullName>
        <active>true</active>
        <businessProcess>Standard Process</businessProcess>
        <description>Permissions and Access issues</description>
        <label>User Admin Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Creation_Ticket</fullName>
        <active>true</active>
        <businessProcess>Standard Process</businessProcess>
        <description>Create new Salesforce user</description>
        <label>User Creation Ticket</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>